--- a/exercícios/ex022/fundo006.html
+++ b/exercícios/ex022/fundo006.html
@@ -6,11 +6,13 @@
     <title>Document</title>
     <style>
         body { 
-            background-color: black;
+            /* background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: right top; 
             background-repeat: no-repeat;
-            background-size: cover;
+            background-size: cover; */ 
+
+            background: black url('imagens/wallpaper002.jpg') right top no-repeat fixed;
         } 
 
         main { 
